# web-agent

./: .env.template  .gitignore  Makefile  README.md  TODO.md  UPGRADES.md  chat_cli.py  main.py  pyproject.toml
lib/: agent.py  tools.py  web_search.py
lib/ai/: llm.py  prompts.py  system_prompts.py  token_utils.py
lib/api/: schemas.py
web-ui/: .env.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json
web-ui/src/: App.tsx  index.css
web-ui/src/components/chat/: chat-message-bubble.tsx  chat-panel.tsx  types.ts
web-ui/src/components/ui/: avatar.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  textarea.tsx
web_agent/: __init__.py  agent.py
web_agent/ai/: __init__.py  llm.py  prompts.py  system_prompts.py  token_utils.py  utils.py
web_agent/api/: __init__.py  schemas.py
web_agent/services/: __init__.py  web_search.py
web_agent/tools/: __init__.py  registry.py
